# monai-train

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: docker-image.yml
example/: model_unet.yaml  model_unetr.yaml  optuna_config.yaml  transformer.yaml
inferencer/: inference.ipynb
monai-ops/: __main__.py
monai-train/: __main__.py  transformer.py
monai_ops/: __main__.py
monai_train/: __init__.py  __main__.py  earlystop.py  progress_bar.py  transformer.py
notebook/: monai_pipeline_demo.ipynb
