[tool.poetry]
name = "monai-train"
version = "0.1.0"
description = "training and inference pipeline utilizing the MONAI and Pytorch frameworks"
authors = ["Adnan Hafeez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
notebook = "^7.0.7"
matplotlib = "^3.8.2"
monai-weekly = {extras = ["einops", "nibabel", "tqdm"], version = "^1.4.dev2404"}
aim = "^3.17.5"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
