[tool.poetry]
name = "monai-train"
version = "0.1.1"
description = "training and inference pipeline utilizing the MONAI and Pytorch frameworks"
authors = ["Adnan Hafeez"]
readme = "README.md"
repository = "https://github.com/adnan-umich/monai-train"
keywords = [
    "Poetry",
    "Virtual Environments",
    "Machine Learning",
    "Data Science",
    "Medical Imagine Segmentation",
    "Segmentation",
    "Pytorch", 
    "Aim",
    "MONAI",
]


[tool.poetry.dependencies]
python = "^3.9, <3.13"
notebook = "^7.0.7"
matplotlib = "^3.8.2"
monai-weekly = {extras = ["einops", "nibabel", "tqdm"], version = "^1.4.dev2404"}
aim = "^3.17.5"
jwt = "^1.3.1"
plotly = "^5.18.0"
optuna = "^3.3.0"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
